Refactored results processing functions

--- a/previsualize_tables.ipynb
+++ b/previsualize_tables.ipynb
@@ -15,79 +15,9 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import seaborn as sns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "id": "758d36d3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def generate_results_table(folders: List[str], keys: List[str],\n",
-    "                           out_folder: str, out_name: str,\n",
-    "                           figsize: Tuple[float] = (18, 6)):\n",
-    "    \"\"\"Using the selected results folders, generates a formatted table\n",
-    "    as an image with all the results, ready for adding to the ppt.\n",
-    "    \"\"\"\n",
-    "    def values_to_str(mean_value: float, std_value: float):\n",
-    "        if mean_value <= 1:\n",
-    "            mean_value *= 100\n",
-    "            std_value *= 100\n",
-    "        formatted = f'{mean_value:.2f} ± {std_value:.2f}'\n",
-    "        return formatted\n",
+    "import seaborn as sns\n",
     "\n",
-    "    # Prepare folders\n",
-    "    if len(folders) != len(keys):\n",
-    "        raise Exception('Length of folders and keys must match')\n",
-    "    folders = [Path(f) for f in folders]\n",
-    "    if any(not f.exists() for f in folders):\n",
-    "        bad = [f for f in folders if not f.exists()]\n",
-    "        bad = \", \".join([f.name for f in bad])\n",
-    "        raise Exception(f'Folder not found: {bad}')\n",
-    "\n",
-    "    # import matplotlib.pyplot as plt\n",
-    "    # import seaborn as sns\n",
-    "    # Process folders results\n",
-    "    results_str = {}\n",
-    "    results = {}\n",
-    "    for i, folder in enumerate(folders):\n",
-    "        key = fill(keys[i], 12) # Classifier\n",
-    "        folder_results_str = {}\n",
-    "        folder_results = {}\n",
-    "        for file in folder.glob('*.pickle'):\n",
-    "            cur_key = file.stem  # Current dataset\n",
-    "            with open(file, 'rb') as f:\n",
-    "                cur_results = pickle.load(f)\n",
-    "            cur_results = np.array([d['accuracy'] for d in cur_results])\n",
-    "            mean = cur_results.mean() * 100\n",
-    "            std = cur_results.std() * 100\n",
-    "            folder_results_str[cur_key] = values_to_str(mean, std)\n",
-    "            folder_results[cur_key] = mean\n",
-    "        results[key] = folder_results\n",
-    "        results_str[key] = folder_results_str\n",
-    "    # Generate DF with results\n",
-    "    # index = [k for d in results.values() for k in d.keys()]\n",
-    "    # index = sorted(list(set(index)))\n",
-    "    sns.set(rc={'figure.figsize': figsize})\n",
-    "    sns.set(font_scale=1.5)\n",
-    "    df = pd.DataFrame(results)\n",
-    "    df_annot = pd.DataFrame(results_str)\n",
-    "    # Generate image\n",
-    "    ax = sns.heatmap(df, annot=df_annot, fmt='', cbar=False, linewidths=1,\n",
-    "                     linecolor='black')\n",
-    "    ax.xaxis.tick_top()\n",
-    "    # plt.xticks(rotation=45)\n",
-    "    plt.tight_layout()\n",
-    "    # Save image\n",
-    "    # out_folder = Path(out_folder)  # DEBUG UNCOMMENT\n",
-    "    # out_folder.mkdir(exist_ok=True, parents=True)  # DEBUG UNCOMMENT\n",
-    "    plt.show()  # DEBUG\n",
-    "    plt.close()  # DEBUG\n",
-    "    # plt.savefig(out_folder / out_name)  # DEBUG UNCOMMENT\n",
-    "\n",
-    "    return df, results, results_str  # DEBUG"
+    "from results_processing import generate_results_table"
    ]
   },
   {
