Added testing with Higgs dataset. Results being added onto ipynb

--- a/xgboost_benchmark_results.ipynb
+++ b/xgboost_benchmark_results.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "id": "d88b66f8",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "\n",
-    "from results_processing import generate_results_table"
+    "from results_processing import load_accuracies_from_results, format_results_as_str, generate_results_table, generate_table_from_df"
    ]
   },
   {
@@ -51,6 +51,49 @@
     "%matplotlib inline\n",
     "df, results, results_str = generate_results_table(pathlist, [p.name for p in pathlist], None, None, (18, 6))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "7a79fd77",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cancer_acc, train_cancer_acc = load_accuracies_from_results('cancer_results/xgb_results', include_train_acc=True)\n",
+    "tests_acc = {'breast_cancer (acc)': cancer_acc['left_240x20'][0]*100,\n",
+    "             'Higgs-1M(auc)': 0.8400475736800282}\n",
+    "benchmark_res = {\n",
+    "    'breast_cancer (acc)': 95.80,  # https://www.kaggle.com/stuarthallows/using-xgboost-with-scikit-learn\n",
+    "    'Higgs-1M (auc)': 0.8245  # Chen, T. and Guestrin, C., 2016, August. Xgboost: A scalable tree boosting system. In Proceedings of the 22nd acm sigkdd international conference on knowledge discovery and data mining (pp. 785-794).\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "728c96a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'left_240x20': array([0.95104895, 0.95104895, 0.95804196, 0.95104895, 0.98601399,\n",
+      "       0.93706294, 0.97202797, 0.95804196, 0.96503497, 0.97202797])}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(cancer_acc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e1b01d6b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
