Implemented xgb nucleotids tests

--- a/xgboost_benchmark_results.ipynb
+++ b/xgboost_benchmark_results.ipynb
@@ -54,24 +54,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "7a79fd77",
+   "execution_count": null,
+   "id": "92366a59",
    "metadata": {},
    "outputs": [],
    "source": [
     "cancer_acc, train_cancer_acc = load_accuracies_from_results('cancer_results/xgb_results', include_train_acc=True)\n",
-    "tests_acc = {'breast_cancer (acc)': cancer_acc['left_240x20'][0]*100,\n",
-    "             'Higgs-1M(auc)': 0.8400475736800282}\n",
-    "benchmark_res = {\n",
+    "tests_acc = {  # Resultados obtenidos por mí en los datasets benchmark\n",
+    "    'breast_cancer (acc)': cancer_acc['left_240x20'][0]*100,\n",
+    "    'Higgs-1M(auc)': 0.8400475736800282\n",
+    "}\n",
+    "nucleo_acc = {  # Resultados obtenidos por mí en los datasets benchmark de nucleótidos\n",
+    "    'S51 (acc)': 0.7264484805943084,\n",
+    "    'S51 (Sn)': 0.7673282442748092,\n",
+    "    'S51 (Sp)': 0.709413312300356,\n",
+    "    'S51 (MCC)': 0.4551998515114749,\n",
+    "}\n",
+    "benchmark_res = {  # Resultados originales de los benchmarks\n",
     "    'breast_cancer (acc)': 95.80,  # https://www.kaggle.com/stuarthallows/using-xgboost-with-scikit-learn\n",
     "    'Higgs-1M (auc)': 0.8245  # Chen, T. and Guestrin, C., 2016, August. Xgboost: A scalable tree boosting system. In Proceedings of the 22nd acm sigkdd international conference on knowledge discovery and data mining (pp. 785-794).\n",
+    "}\n",
+    "benchmark_nucleo = {  # Resultados originales del paper de nucleótidos\n",
+    "    'S51 (acc)': 0.7314,  #  Qiang, X., Chen, H., Ye, X., Su, R. and Wei, L., 2018. M6AMRFS: robust prediction of N6-methyladenosine sites with sequence-based features in multiple species. Frontiers in genetics, 9, p.495.\n",
+    "    'S51 (Sp)': 0.7284,\n",
+    "    'S51 (Sn)': 0.7345,\n",
+    "    'S51 (MCC)': 0.4629, \n",
     "}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "728c96a7",
+   "id": "e3dc47ae",
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +104,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1b01d6b",
+   "id": "b28da010",
    "metadata": {},
    "outputs": [],
    "source": []
