Added phase 2 results and plots

--- a/xgb_parameters.ipynb
+++ b/xgb_parameters.ipynb
@@ -131,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "b247cd6d",
+   "id": "54df39e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,7 +385,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "b8f99346",
+   "id": "61339da2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +396,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "68f80779",
+   "id": "48a27722",
    "metadata": {
     "scrolled": true
    },
@@ -7301,7 +7301,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "f1fe18ec",
+   "id": "7cbebac3",
    "metadata": {},
    "outputs": [
     {
@@ -14373,7 +14373,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "189b6e09",
+   "id": "445ac6f8",
    "metadata": {
     "scrolled": true
    },
@@ -17417,7 +17417,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "28e470a9",
+   "id": "e65dffd5",
    "metadata": {},
    "outputs": [
     {
@@ -17438,7 +17438,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "05ba6580",
+   "id": "adf403ef",
    "metadata": {},
    "outputs": [
     {
@@ -17593,7 +17593,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "f6f582d8",
+   "id": "9417c234",
    "metadata": {
     "scrolled": true
    },
@@ -17632,7 +17632,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "ec4428c0",
+   "id": "fea8cd37",
    "metadata": {},
    "outputs": [
     {
@@ -35430,7 +35430,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "8eb586d9",
+   "id": "488fa35e",
    "metadata": {
     "scrolled": true
    },
@@ -35443,7 +35443,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "efc02ce5",
+   "id": "ae497d7e",
    "metadata": {},
    "outputs": [
     {
@@ -35847,7 +35847,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "49fd8036",
+   "id": "107bd72f",
    "metadata": {},
    "outputs": [
     {
@@ -36238,7 +36238,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "dbb05ce5",
+   "id": "11811cfa",
    "metadata": {},
    "outputs": [
     {
@@ -36628,7 +36628,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "50761ffb",
+   "id": "b7af4694",
    "metadata": {},
    "outputs": [
     {
@@ -37015,7 +37015,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "20d70365",
+   "id": "fd5d6815",
    "metadata": {},
    "outputs": [
     {
@@ -37042,7 +37042,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "87d286b2",
+   "id": "31fb0a5f",
    "metadata": {},
    "outputs": [
     {
@@ -37066,7 +37066,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "914451fd",
+   "id": "a23dc6cb",
    "metadata": {},
    "outputs": [
     {
@@ -37089,7 +37089,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f51bdb95",
+   "id": "722c761c",
    "metadata": {},
    "source": [
     "## Step 2"
@@ -37097,8 +37097,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
-   "id": "e71f99f8",
+   "execution_count": 111,
+   "id": "7979acd0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37126,8 +37126,8 @@
     "        seed=SEED\n",
     "    )\n",
     "    param_grid = {\n",
-    "        'max_depth': range(3, 10, 2),\n",
-    "        'min_child_weight': range(1, 6, 2)\n",
+    "        'max_depth': range(1, 10, 1),\n",
+    "        'min_child_weight': range(1, 6, 1)\n",
     "    }\n",
     "\n",
     "    model = GridSearchCV(model, param_grid, n_jobs=n_jobs, cv=5,\n",
@@ -37148,22 +37148,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
-   "id": "db6a83a7",
+   "execution_count": 113,
+   "id": "0aca0571",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "left_240x20_fixed CV2 0:09:43.924847\n",
-      "right_240x20_fixed CV2 0:06:57.234393\n",
-      "left_240x40_fixed CV2 0:07:08.615091\n",
-      "right_240x40_fixed CV2 0:06:01.633954\n",
-      "left_240x20 CV2 0:04:27.046400\n",
-      "right_240x20 CV2 0:03:05.469449\n",
-      "left_240x40 CV2 0:37:28.480704\n",
-      "right_240x40 CV2 0:07:54.856920\n"
+      "left_240x20_fixed CV2 0:30:58.663368\n",
+      "right_240x20_fixed CV2 0:21:56.855932\n",
+      "left_240x40_fixed CV2 0:22:47.465956\n",
+      "right_240x40_fixed CV2 0:19:23.018745\n",
+      "left_240x20 CV2 0:14:05.292153\n",
+      "right_240x20 CV2 0:09:51.731730\n",
+      "left_240x40 CV2 1:55:32.573883\n",
+      "right_240x40 CV2 0:23:42.732865\n"
      ]
     }
    ],
@@ -37179,11 +37179,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ce40dd60",
+   "execution_count": 112,
+   "id": "29b135a0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "H41 CV2 0:00:32.916701\n",
+      "M41 CV2 0:00:04.887415\n"
+     ]
+    }
+   ],
+   "source": [
+    "for d, cur_data in (('H41', h41_data), ('M41', m41_data)):\n",
+    "    with open(f'results_xgb_params/{d}/phase1_cvmodel.pickle', 'rb') as f:\n",
+    "        m = pickle.load(f)\n",
+    "    cv_results = m.cv_results_\n",
+    "    out_folder = f'results_xgb_params/{d}'\n",
+    "    _, _ = phase_2(cur_data, cv_results, out_folder, n_jobs=5, data_name=d)"
+   ]
   }
  ],
  "metadata": {
